Adicionando as imagens à página

--- a/index.html
+++ b/index.html
@@ -31,8 +31,17 @@
     </header>
     
     <div class="body">
-        <div class="images">
-            <h1>A imagens ficarão aqui</h1>
+        <div class="imagens">
+            <div class="imagemG">
+                <img class="imagemGrande" src="./imagens/image-product-1.jpg" alt="">
+            </div>
+
+            <div class="imagensP">
+                <div class="imagemPequena1div"><img class="imagemPequena1" src="./imagens/image-product-1-thumbnail.jpg" alt=""></div>
+                <div class="imagemPequena2div"><img class="imagemPequena2" src="./imagens/image-product-2-thumbnail.jpg" alt=""></div>
+                <div class="imagemPequena3div"><img class="imagemPequena3" src="./imagens/image-product-3-thumbnail.jpg" alt=""></div>
+                <div class="imagemPequena4div"><img class="imagemPequena4" src="./imagens/image-product-4-thumbnail.jpg" alt=""></div>
+            </div>
         </div>
         <div class="info">
             <div class="cabecalho">
@@ -80,5 +89,6 @@
         </div>
     </div>
 
+    <script src="./script.js"></script>
 </body>
 </html>
