Trocando a imagem grande

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             </div>
 
             <div class="imagensP">
-                <div class="imagemPequena1div"><img class="imagemPequena1" src="./imagens/image-product-1-thumbnail.jpg" alt=""></div>
-                <div class="imagemPequena2div"><img class="imagemPequena2" src="./imagens/image-product-2-thumbnail.jpg" alt=""></div>
-                <div class="imagemPequena3div"><img class="imagemPequena3" src="./imagens/image-product-3-thumbnail.jpg" alt=""></div>
-                <div class="imagemPequena4div"><img class="imagemPequena4" src="./imagens/image-product-4-thumbnail.jpg" alt=""></div>
+                <div id="imagemPequena1"><img class="imagemPequena1" src="./imagens/image-product-1-thumbnail.jpg" alt=""></div>
+                <div id="imagemPequena2"><img class="imagemPequena2" src="./imagens/image-product-2-thumbnail.jpg" alt=""></div>
+                <div id="imagemPequena3"><img class="imagemPequena3" src="./imagens/image-product-3-thumbnail.jpg" alt=""></div>
+                <div id="imagemPequena4"><img class="imagemPequena4" src="./imagens/image-product-4-thumbnail.jpg" alt=""></div>
             </div>
         </div>
         <div class="info">
