Finalizando a primeira parte das imagens

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="imagensP">
-                <div id="imagemPequena1"><img class="imagemPequena1" src="./imagens/image-product-1-thumbnail.jpg" alt=""></div>
+                <div id="imagemPequena1" class="border"><img class="imagemPequena1 opacity" src="./imagens/image-product-1-thumbnail.jpg" alt=""></div>
                 <div id="imagemPequena2"><img class="imagemPequena2" src="./imagens/image-product-2-thumbnail.jpg" alt=""></div>
                 <div id="imagemPequena3"><img class="imagemPequena3" src="./imagens/image-product-3-thumbnail.jpg" alt=""></div>
                 <div id="imagemPequena4"><img class="imagemPequena4" src="./imagens/image-product-4-thumbnail.jpg" alt=""></div>
@@ -88,6 +88,7 @@
             </div>
         </div>
     </div>
+    
 
     <script src="./script.js"></script>
 </body>
