--- a/index.html
+++ b/index.html
@@ -74,18 +74,21 @@
             </div>
         </div>
 
-        <dialog>
-            
-            <svg class="closeModal" width="14" height="15" xmlns="http://www.w3.org/2000/svg"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="hsl(26, 100%, 55%)" fill-rule="evenodd"/></svg>
-            <div class="imagemG">
-                <img class="imagemGrande2 openModal" src="./imagens/image-product-1.jpg" alt="">
-            </div>
+        <dialog class="dialog"> 
+            <div class="contentModal">
+                <svg class="closeModal" width="37" height="40" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 15"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="hsl(26, 100%, 60%)" fill-rule="evenodd" /></svg>
+                <div class="imagemG">
+                    <svg class="setas anterior" width="12" height="18" xmlns="http://www.w3.org/2000/svg"><path d="M11 1 3 9l8 8" stroke="hsl(26, 100%, 60%)" stroke-width="3" fill="none" fill-rule="evenodd"/></svg>
+                    <img class="imagemGrande2" src="" alt="">
+                    <svg class="setas proximo" width="13" height="18" xmlns="http://www.w3.org/2000/svg"><path d="m2 1 8 8-8 8" stroke="hsl(26, 100%, 60%)" stroke-width="3" fill="none" fill-rule="evenodd"/></svg>
+                </div>
 
-            <div class="imagensP">
-                <div id="imagemPequena5" class="border"><img class="imagemPequena5 opacity" src="./imagens/image-product-1-thumbnail.jpg" alt=""></div>
-                <div id="imagemPequena6"><img class="imagemPequena6" src="./imagens/image-product-2-thumbnail.jpg" alt=""></div>
-                <div id="imagemPequena7"><img class="imagemPequena7" src="./imagens/image-product-3-thumbnail.jpg" alt=""></div>
-                <div id="imagemPequena8"><img class="imagemPequena8" src="./imagens/image-product-4-thumbnail.jpg" alt=""></div>
+                <div class="imagensP2">
+                    <div id="imagemPequena5" class="border"><img class="imagemPequena5 opacity" src="./imagens/image-product-1-thumbnail.jpg" alt=""></div>
+                    <div id="imagemPequena6"><img class="imagemPequena6" src="./imagens/image-product-2-thumbnail.jpg" alt=""></div>
+                    <div id="imagemPequena7"><img class="imagemPequena7" src="./imagens/image-product-3-thumbnail.jpg" alt=""></div>
+                    <div id="imagemPequena8"><img class="imagemPequena8" src="./imagens/image-product-4-thumbnail.jpg" alt=""></div>
+                </div>
             </div>
         </dialog>
 
