Responsividade completa e o botão de menu das opções operando

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <div class="i">
-            <div class="menu-options">
+            <div class="menu-options openMenuOption">
                 <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg"><path d="M16 12v3H0v-3h16Zm0-6v3H0V6h16Zm0-6v3H0V0h16Z" fill="#69707D" fill-rule="evenodd"/></svg>
             </div>
             <div class="logo">
@@ -17,14 +17,17 @@
             </div>
             <div class="menu">
                 <ul class="menu">
-                    <li id="1" class="menu-item">Coleções</li>
-                    <li id="2" class="menu-item">Homens</li>
-                    <li id="3" class="menu-item barraLaranja">Mulheres</li>
-                    <li id="4" class="menu-item">Sobre</li>
-                    <li id="5" class="menu-item">Contato</li>
+                    <li id="um" class="menu-item">Coleções</li>
+                    <li id="dois" class="menu-item">Homens</li>
+                    <li id="tres" class="menu-item barraLaranja">Mulheres</li>
+                    <li id="quatro" class="menu-item">Sobre</li>
+                    <li id="cinco" class="menu-item">Contato</li>
                 </ul>
             </div>
         </div>
+
+       
+
         <div class="ii">
             <div class="carrinho">
                 <h4 class="numQuantProd off">0</h4>
@@ -61,6 +64,17 @@
         <div class="carrinhoVazio on">
             <h2 class="carrinhoVazioText">O seu carrinho está vazio</h2 class="carrinhoVazio">
         </div>
+    </div>
+
+    <div class="show-menu-options">
+        <ul class="menu2">
+            <svg class="closeMenuOption" width="17" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 15"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd" /></svg>
+            <li id="seis" class="menu-item">Coleções</li>
+            <li id="sete" class="menu-item">Homens</li>
+            <li id="oito" class="menu-item barraLaranja">Mulheres</li>
+            <li id="nove" class="menu-item">Sobre</li>
+            <li id="dez" class="menu-item">Contato</li>
+        </ul>
     </div>
 
     <div class="body">
