--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <div class="show-menu-options">
+    <div class="show-menu-options off">
         <ul class="menu2">
             <svg class="closeMenuOption" width="17" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 15"><path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd" /></svg>
             <li id="seis" class="menu-item">Coleções</li>
